// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GCP Processor Cloud Run 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "err": Object {
          "message": "hello",
          "name": "Error",
          "stack": "Error: hello
    at Object.<anonymous> (~/logger/__tests__/gcp.test.ts:29:17)
    at Promise.then.completed (~/logger/node_modules/.pnpm/jest-circus@29.5.0/node_modules/jest-circus/build/utils.js:293:28)
    at new Promise (<anonymous>)",
        },
      },
      "err": [Error: hello],
      "level": 40,
      "msg": "hello",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
]
`;

exports[`GCP Processor Cloud Run Error Object 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "@type": "type.googleapis.com/google.devtools.clouderrorreporting.v1beta1.ReportedErrorEvent",
        "message": "Ded 1",
        "name": "Error",
        "stack_trace": "Error: Ded 1
    at Object.<anonymous> (~/logger/__tests__/gcp.test.ts:52:18)
    at Promise.then.completed (~/logger/node_modules/.pnpm/jest-circus@29.5.0/node_modules/jest-circus/build/utils.js:293:28)
    at new Promise (<anonymous>)",
      },
      "err": [Error: Ded 1],
      "level": 50,
      "msg": "Ded 1",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
]
`;

exports[`GCP Processor Cloud Run Fatal with Error Object 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "@type": "type.googleapis.com/google.devtools.clouderrorreporting.v1beta1.ReportedErrorEvent",
        "message": "Ded 2",
        "name": "Error",
        "stack_trace": "Error: Ded 2
    at Object.<anonymous> (~/logger/__tests__/gcp.test.ts:64:18)
    at Promise.then.completed (~/logger/node_modules/.pnpm/jest-circus@29.5.0/node_modules/jest-circus/build/utils.js:293:28)
    at new Promise (<anonymous>)",
      },
      "err": [Error: Ded 2],
      "level": 60,
      "msg": "Ded 2",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
]
`;

exports[`GCP Processor Cloud Run variant 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "err": Object {
          "message": "hello",
          "name": "Error",
          "stack": "Error: hello
    at Object.<anonymous> (~/logger/__tests__/gcp.test.ts:41:17)
    at Promise.then.completed (~/logger/node_modules/.pnpm/jest-circus@29.5.0/node_modules/jest-circus/build/utils.js:293:28)
    at new Promise (<anonymous>)",
        },
      },
      "err": [Error: hello],
      "level": 40,
      "msg": "hello",
      "time": 2009-02-13T23:31:30.000Z,
    },
  ],
]
`;
